Fixed mobile overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  max-width: 100%;
   overflow-x: hidden;
 }
 
